--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./workintech.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Workintech + 🍕</title>
+     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Barlow&display=swap" rel="stylesheet">
+    <title>Teknolojik Yemekler + 🍕</title>
   </head>
 
   <body>
